--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "rss": "^1.2.2"
   },
   "devDependencies": {
+    "@types/node": "^17.0.0",
     "@types/react": "^17.0.37",
     "eslint": "^7.29.0",
     "eslint-config-next": "12.0.7",
