--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
+    "@giscus/react": "^1.0.1",
     "contentlayer": "^0.0.33",
     "facepaint": "^1.2.1",
     "globby": "^12.0.2",
