--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "globby": "^12.0.2",
     "next": "12.0.7",
     "next-contentlayer": "^0.0.33",
+    "next-seo": "^5.2.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "rehype-autolink-headings": "^6.1.0",
