feat: contentlayer version up, tags 추가

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,8 +14,10 @@
     "isolatedModules": true,
     "jsx": "preserve",
     "baseUrl": ".",
-    "incremental": true
+    "incremental": true,    "paths": {
+      "contentlayer/generated": ["./.contentlayer/generated"],
+    }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".contentlayer/generated"],
   "exclude": ["node_modules"]
 }
