--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "eslint-plugin-prettier": "^3.3.1",
     "gray-matter": "^4.0.3",
     "prettier": "2.2.1",
+    "rescript": "^9.1.4",
     "typescript": "^4.5.4"
   }
 }
