--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
     "@giscus/react": "^1.0.1",
+    "@rescript/react": "^0.10.3",
     "contentlayer": "0.2.5",
     "facepaint": "^1.2.1",
     "globby": "^12.0.2",
