--- a/package.json
+++ b/package.json
@@ -28,15 +28,19 @@
     "rss": "^1.2.2"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.2",
     "@types/node": "^17.0.0",
     "@types/react": "^17.0.37",
+    "autoprefixer": "^10.4.7",
     "eslint": "^7.29.0",
     "eslint-config-next": "12.0.7",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.3.1",
     "gray-matter": "^4.0.3",
+    "postcss": "^8.4.14",
     "prettier": "2.2.1",
     "rescript": "^9.1.4",
+    "tailwindcss": "^3.1.3",
     "typescript": "^4.5.4"
   }
 }
