rescript 빌드 명령어 추가

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "scripts": {
     "re:dev":"rescript build -w",
+    "re:build":"rescript build",
     "dev": "next dev",
     "build": "next build",
     "rss": "NODE_OPTIONS='--experimental-json-modules' node ./scripts/rss.mjs && node ./scripts/sitemap.mjs",
