--- a/components.json
+++ b/components.json
@@ -10,7 +10,7 @@
     "cssVariables": true
   },
   "aliases": {
-    "components": "@/components/ui",
+    "components": "@/components",
     "utils": "@/components/ui/utils"
   }
 }
