--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "next-contentlayer": "^0.3.4",
     "react": "^18",
     "react-dom": "^18",
+    "rehype-code-titles": "^1.2.0",
     "tailwind-merge": "^2.1.0",
     "tailwindcss-animate": "^1.0.7"
   },
@@ -33,6 +34,8 @@
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
     "postcss": "^8",
+    "rehype": "^13.0.1",
+    "rehype-pretty-code": "^0.12.1",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
