프로젝트 추가

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,5 +12,9 @@
   ],
   "editor.quickSuggestions": {
     "strings": true
+  },
+  "github.copilot.enable": {
+    "*": true,
+    "markdown": true
   }
 }
