--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbo",
     "build": "contentlayer build && next build",
     "start": "next start",
     "lint": "next lint",
@@ -22,11 +22,11 @@
     "contentlayer": "^0.3.4",
     "dayjs": "^1.11.10",
     "lucide-react": "^0.294.0",
-    "next": "14.0.4",
+    "next": "^15.0.0-canary.120",
     "next-contentlayer": "^0.3.4",
     "next-themes": "^0.2.1",
-    "react": "^18",
-    "react-dom": "^18",
+    "react": "^19.0.0-rc-2d2cc042-20240809",
+    "react-dom": "^19.0.0-rc-2d2cc042-20240809",
     "react-hook-form": "^7.49.0",
     "rehype-code-titles": "^1.2.0",
     "tailwind-merge": "^2.1.0",
@@ -35,9 +35,9 @@
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.10",
-    "@types/node": "^20",
-    "@types/react": "^18.2.43",
-    "@types/react-dom": "^18",
+    "@types/node": "22.2.0",
+    "@types/react": "18.3.3",
+    "@types/react-dom": "18.3.0",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
