--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbo",
+    "dev": "next dev",
     "build": "contentlayer build && next build",
     "start": "next start",
     "lint": "next lint",
@@ -28,6 +28,7 @@
     "react": "^19.0.0-rc-2d2cc042-20240809",
     "react-dom": "^19.0.0-rc-2d2cc042-20240809",
     "react-hook-form": "^7.49.0",
+    "react-infinite-scroll-hook": "^5.0.1",
     "rehype-code-titles": "^1.2.0",
     "tailwind-merge": "^2.1.0",
     "tailwindcss-animate": "^1.0.7",
