--- a/.gitignore
+++ b/.gitignore
@@ -35,7 +35,8 @@ yarn-error.log*
 *.tsbuildinfo
 next-env.d.ts
 
-# contentlayer
-.contentlayer
-
 .env
+
+# velite generated files
+.velite
+public/static
