--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "contentlayer build && next build",
+    "build": "next build",
     "start": "next start",
     "lint": "next lint",
     "gen-types": "npx supabase gen types typescript --project-id \"blzgrhpbewpoxxtougrh\" > types/database-generated.types.ts"
@@ -19,11 +19,9 @@
     "@supabase/supabase-js": "^2.39.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
-    "contentlayer": "^0.3.4",
     "dayjs": "^1.11.10",
     "lucide-react": "^0.294.0",
     "next": "^15.0.0-canary.120",
-    "next-contentlayer": "^0.3.4",
     "next-themes": "^0.2.1",
     "react": "^19.0.0-rc-2d2cc042-20240809",
     "react-dom": "^19.0.0-rc-2d2cc042-20240809",
@@ -46,6 +44,7 @@
     "rehype": "^13.0.1",
     "rehype-pretty-code": "^0.12.1",
     "tailwindcss": "^3.3.0",
-    "typescript": "^5"
+    "typescript": "^5",
+    "velite": "^0.1.1"
   }
 }
