--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
 		"react-dom": "^19.0.0-rc-2d2cc042-20240809",
 		"react-hook-form": "^7.49.0",
 		"react-infinite-scroll-hook": "^5.0.1",
+		"rehype-pretty-code": "^0.14.0",
+		"shiki": "^1.16.2",
 		"tailwind-merge": "^2.1.0",
 		"tailwindcss-animate": "^1.0.7",
 		"zod": "^3.22.4"
@@ -39,8 +41,6 @@
 		"@types/react-dom": "18.3.0",
 		"autoprefixer": "^10.0.1",
 		"postcss": "^8",
-		"rehype": "^13.0.1",
-		"rehype-pretty-code": "^0.12.1",
 		"tailwindcss": "^3.3.0",
 		"typescript": "^5",
 		"velite": "^0.1.1"
