--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 		"gen-types": "npx supabase gen types typescript --project-id \"blzgrhpbewpoxxtougrh\" > types/database-generated.types.ts"
 	},
 	"dependencies": {
+		"@formatjs/intl-localematcher": "^0.5.7",
 		"@hookform/resolvers": "^3.3.2",
 		"@radix-ui/react-dialog": "^1.0.5",
 		"@radix-ui/react-icons": "^1.3.0",
@@ -17,10 +18,12 @@
 		"@radix-ui/react-navigation-menu": "^1.1.4",
 		"@radix-ui/react-slot": "^1.0.2",
 		"@supabase/supabase-js": "^2.39.0",
+		"@types/negotiator": "^0.6.3",
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.0.0",
 		"dayjs": "^1.11.10",
 		"lucide-react": "^0.294.0",
+		"negotiator": "^1.0.0",
 		"next": "^15.0.0-canary.120",
 		"next-themes": "^0.2.1",
 		"react": "^19.0.0-rc-2d2cc042-20240809",
